--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
       <nav>
         <ul class="header__nav list">
           <li class="header__list">
-            <a class="header__link link" href="#">Business areas</a>
+            <a class="header__link link" href="#Business areas">Business areas</a>
           </li>
           <li class="header__list">
-            <a class="header__link link" href="#">Featured images</a>
+            <a class="header__link link" href="#Featured images">Featured images</a>
           </li>
           <li class="header__list">
-            <a class="header__link link" href="#">Gear cage</a>
+            <a class="header__link link" href="#Gear cage">Gear cage</a>
           </li>
           <li class="header__list">
-            <a class="header__link link" href="#">Contact</a>
+            <a class="header__link link" href="#Contact">Contact</a>
           </li>
         </ul>
       </nav>
@@ -63,7 +63,7 @@
     </section>
     <!-- Секция what-we-do -->
     <section class="what-we-do">
-      <h2 class="section-title">What we do.</h2>
+      <h2 class="section-title" id="Business areas">What we do.</h2>
       <p class="section-subtitle">The areas that we're specialized in.</p>
       <div class="grid-container">
         <article class="grid-container__product cell">
@@ -111,7 +111,7 @@
       </div>
     </section>
     <!-- Секция photo -->
-    <section class="photo fuji">
+    <section class="photo fuji" id="Featured images">
       <div class="photo__block">
         <h3 class="photo__title">Sunset at Mount Fuji</h3>
         <p class="photo__text">Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus
@@ -137,7 +137,7 @@
       </ul>
     </section>
     <!-- Секция two-columns -->
-    <section class="two-columns">
+    <section class="two-columns" id="Gear cage">
       <article class="first-column">
         <h3 class="first-column__title">The tools that we use.</h3>
         <p class="first-column__subtitle">The Gear cage</p>
@@ -304,7 +304,7 @@
       </form>
       <div class="line-two"></div>
       <h class="footer__copyright">© Aperture Photography, Inc. All rights reserved. Licensing.</h>
-      <div class="social-media">
+      <div class="social-media" id="Contact">
         <ul class="social-media__links list">
           <li>
             <a class="social-media__link" href="#"><img src="./images/twitter.svg" alt="twitter"></a>
