--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
       <nav>
         <ul class="header__nav list">
           <li class="header__list">
-            <a class="header__link link" href="#Business areas">Business areas</a>
+            <a class="header__link link" href="#Business-areas">Business areas</a>
           </li>
           <li class="header__list">
-            <a class="header__link link" href="#Featured images">Featured images</a>
+            <a class="header__link link" href="#Featured-images">Featured images</a>
           </li>
           <li class="header__list">
-            <a class="header__link link" href="#Gear cage">Gear cage</a>
+            <a class="header__link link" href="#Gear-cage">Gear cage</a>
           </li>
           <li class="header__list">
             <a class="header__link link" href="#Contact">Contact</a>
@@ -44,7 +44,7 @@
         tristique posuere.</p>
       <ul class="photo-settings list">
         <li>
-          <img class="photo-settings__img" src="../Aperture/images/shutter speed.svg" alt="shutter speed">
+          <img class="photo-settings__img" src="../Aperture/images/shutter speed.svg" alt="shutter-speed">
           <sup class="photo-settings__sup-text">1/2000s</sup>
         </li>
         <li>
@@ -63,7 +63,7 @@
     </section>
     <!-- Секция what-we-do -->
     <section class="what-we-do">
-      <h2 class="section-title" id="Business areas">What we do.</h2>
+      <h2 class="section-title" id="Business-areas">What we do.</h2>
       <p class="section-subtitle">The areas that we're specialized in.</p>
       <div class="grid-container">
         <article class="grid-container__product cell">
@@ -111,7 +111,7 @@
       </div>
     </section>
     <!-- Секция photo -->
-    <section class="photo fuji" id="Featured images">
+    <section class="photo fuji" id="Featured-images">
       <div class="photo__block">
         <h3 class="photo__title">Sunset at Mount Fuji</h3>
         <p class="photo__text">Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus
@@ -119,7 +119,7 @@
       </div>
       <ul class="photo-settings list">
         <li>
-          <img class="photo-settings__img" src="../Aperture/images/shutter speed.svg" alt="shutter speed">
+          <img class="photo-settings__img" src="../Aperture/images/shutter speed.svg" alt="shutter-speed">
           <sup class="photo-settings__sup-text">1"</sup>
         </li>
         <li>
@@ -137,7 +137,7 @@
       </ul>
     </section>
     <!-- Секция two-columns -->
-    <section class="two-columns" id="Gear cage">
+    <section class="two-columns" id="Gear-cage">
       <article class="first-column">
         <h3 class="first-column__title">The tools that we use.</h3>
         <p class="first-column__subtitle">The Gear cage</p>
@@ -149,10 +149,10 @@
           <p class="btn-link__text">Check it out</p>
         </a>
       </article>
-      <article class="second-column">
+      <article class="second-column" aria-label="without_h2-h6">
         <ul class="photo-settings list">
           <li>
-            <img class="photo-settings__img" src="../Aperture/images/shutter speed.svg" alt="shutter speed">
+            <img class="photo-settings__img" src="../Aperture/images/shutter speed.svg" alt="shutter-speed">
             <sup class="photo-settings__sup-text">0,8"</sup>
           </li>
           <li>
@@ -179,7 +179,7 @@
       </div>
       <ul class="photo-settings list">
         <li>
-          <img class="photo-settings__img" src="../Aperture/images/shutter speed.svg" alt="shutter speed">
+          <img class="photo-settings__img" src="../Aperture/images/shutter speed.svg" alt="shutter-speed">
           <sup class="photo-settings__sup-text">1/400s</sup>
         </li>
         <li>
@@ -218,7 +218,7 @@
       </div>
       <ul class="photo-settings list">
         <li>
-          <img class="photo-settings__img" src="../Aperture/images/shutter speed.svg" alt="shutter speed">
+          <img class="photo-settings__img" src="../Aperture/images/shutter speed.svg" alt="shutter-speed">
           <sup class="photo-settings__sup-text">6''</sup>
         </li>
         <li>
@@ -303,7 +303,7 @@
         <input class="form__btn" type="reset" value="Sign up">
       </form>
       <div class="line-two"></div>
-      <h class="footer__copyright">© Aperture Photography, Inc. All rights reserved. Licensing.</h>
+      <h2 class="footer__copyright">© Aperture Photography, Inc. All rights reserved. Licensing.</h2>
       <div class="social-media" id="Contact">
         <ul class="social-media__links list">
           <li>
