--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         tristique posuere.</p>
       <ul class="photo-settings list">
         <li>
-          <img class="photo-settings__img" src="../Aperture/images/shutter speed.svg" alt="shutter-speed">
+          <img class="photo-settings__img" src="../Aperture/images/shutter_speed.svg" alt="shutter-speed">
           <sup class="photo-settings__sup-text">1/2000s</sup>
         </li>
         <li>
@@ -119,7 +119,7 @@
       </div>
       <ul class="photo-settings list">
         <li>
-          <img class="photo-settings__img" src="../Aperture/images/shutter speed.svg" alt="shutter-speed">
+          <img class="photo-settings__img" src="../Aperture/images/shutter_speed.svg" alt="shutter-speed">
           <sup class="photo-settings__sup-text">1"</sup>
         </li>
         <li>
@@ -137,7 +137,7 @@
       </ul>
     </section>
     <!-- Секция two-columns -->
-    <section class="two-columns" id="Gear-cage">
+    <section class="two-columns" id="Gear-cage" aria-label="without_h2-h6">
       <article class="first-column">
         <h3 class="first-column__title">The tools that we use.</h3>
         <p class="first-column__subtitle">The Gear cage</p>
@@ -152,7 +152,7 @@
       <article class="second-column" aria-label="without_h2-h6">
         <ul class="photo-settings list">
           <li>
-            <img class="photo-settings__img" src="../Aperture/images/shutter speed.svg" alt="shutter-speed">
+            <img class="photo-settings__img" src="../Aperture/images/shutter_speed.svg" alt="shutter-speed">
             <sup class="photo-settings__sup-text">0,8"</sup>
           </li>
           <li>
@@ -179,7 +179,7 @@
       </div>
       <ul class="photo-settings list">
         <li>
-          <img class="photo-settings__img" src="../Aperture/images/shutter speed.svg" alt="shutter-speed">
+          <img class="photo-settings__img" src="../Aperture/images/shutter_speed.svg" alt="shutter-speed">
           <sup class="photo-settings__sup-text">1/400s</sup>
         </li>
         <li>
@@ -218,7 +218,7 @@
       </div>
       <ul class="photo-settings list">
         <li>
-          <img class="photo-settings__img" src="../Aperture/images/shutter speed.svg" alt="shutter-speed">
+          <img class="photo-settings__img" src="../Aperture/images/shutter_speed.svg" alt="shutter-speed">
           <sup class="photo-settings__sup-text">6''</sup>
         </li>
         <li>
