--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../Aperture/pages/index.css">
+  <link rel="stylesheet" href="./pages/index.css">
   <title>Aperture</title>
 </head>
 
 <body class="root">
   <header class="header">
     <div class="header__frame">
-      <img class="header__logo" src="../Aperture/images/Aperture.svg" alt="logo">
+      <img class="header__logo" src="./images/Aperture.svg" alt="logo">
       <nav>
         <ul class="header__nav list">
           <li class="header__list">
