--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./pages/index.css">
   <title>Aperture</title>
+  <link rel="icon" href="./images/A.png">
 </head>
 
 <body class="root">
